# subgraph_filter_suit

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  environment.yml
.github/workflows/: ci.yml
include/: Constants.h
include/exceptions/: GraphConstructionException.h  InvalidArgumentException.h  SgfException.h  SgfPathDoesntExistException.h  SgfReturnCode.h
include/graph/: BoostGraph.h  ColoredGraph.h
include/io/: GraphmlGraphReader.h  IColoredGraphReader.h  IPatternIOManager.h  JsonGraphReader.h  VertexEdgeGraphReader.h
include/io/graph/: GraphmlGraphReader.h  IColoredGraphReader.h  IoGraphUtils.h  JsonGraphReader.h  VertexEdgeGraphReader.h
include/io/pattern/: GraphmlPatternIOManager.h
include/logging/: FileLogger.h  ILogger.h  LogLevel.h  Loggable.h  LoggerHandler.h
include/preprocessing/: GroupEnumerationPreprocessor.h
include/utils/: GraphUtils.h
src/graph/: ColoredGraph.cpp
src/io/: GraphmlGraphReader.cpp  JsonGraphReader.cpp  VertexEdgeGraphReader.cpp
src/io/graph/: GraphmlGraphReader.cpp  IoGraphUtils.cpp  JsonGraphReader.cpp  VertexEdgeGraphReader.cpp
src/io/pattern/: GraphmlPatternIOManager.cpp
src/logging/: FileLogger.cpp
src/preprocessing/: GroupEnumerationPreprocessor.cpp
src/utils/: GraphUtils.cpp
tests/: .clang-tidy  CMakeLists.txt  ColoredGraphTestHelpers.h
tests/graph/: CMakeLists.txt  ColoredGraphTest.cpp
tests/io/: GraphmlGraphReaderTest.cpp
tests/io/graph/: GraphmlGraphReaderTest.cpp  JsonGraphReaderTest.cpp  VertexEdgeGraphReaderTest.cpp
tests/io/graphml/: color_out_of_range.graphml  duplicate_vertex_id_directed.graphml  duplicate_vertex_id_undirected.graphml  empty_directed.graphml  empty_undirected.graphml  invalid_graphml_structure.graphml  malformed_xml.graphml  no_color_keys.graphml  no_edgedefault.graphml  self_loop_directed.graphml  self_loop_undirected.graphml  single_node_directed.graphml  single_node_undirected.graphml  triangle_all_edges_diff_colors_directed.graphml  triangle_all_edges_diff_colors_undirected.graphml  triangle_all_edges_same_color_directed.graphml  triangle_all_edges_same_color_undirected.graphml  triangle_diff_vertex_colors_directed.graphml  triangle_diff_vertex_colors_undirected.graphml  triangle_same_vertex_color_directed.graphml  triangle_same_vertex_color_undirected.graphml  triangle_two_edges_same_color_directed.graphml  triangle_two_edges_same_color_undirected.graphml  triangle_two_same_vertex_color_directed.graphml  triangle_two_same_vertex_color_undirected.graphml  two_nodes_bidirectional_diff_edge_colors_directed.graphml  two_nodes_bidirectional_diff_edge_colors_undirected.graphml  two_nodes_bidirectional_same_edge_color_directed.graphml  two_nodes_bidirectional_same_edge_color_undirected.graphml  two_nodes_bidirectional_uncolored_directed.graphml  two_nodes_bidirectional_uncolored_undirected.graphml  two_nodes_no_edges_directed.graphml  two_nodes_no_edges_undirected.graphml  two_nodes_one_edge_directed.graphml  two_nodes_one_edge_undirected.graphml  two_nodes_parallel_diff_edge_colors_directed.graphml  two_nodes_parallel_diff_edge_colors_undirected.graphml  two_nodes_parallel_same_edge_color_directed.graphml  two_nodes_parallel_same_edge_color_undirected.graphml  two_nodes_parallel_uncolored_directed.graphml  (+3 more)
tests/io/json/: duplicate_node_id.json  link_unknown_node.json  malformed_json.json  missing_link_source.json  missing_link_target.json  missing_links_key.json  missing_node_color.json  missing_node_id.json  mixed_edge_colors.json  non_consecutive_node_ids_undirected.json  nonnumeric_edge_color.json  nonnumeric_link_source.json  nonnumeric_link_target.json  nonnumeric_node_color.json  nonnumeric_node_id.json  self_loop_colored.json  self_loop_uncolored.json  single_node_directed.json  triangle_all_edges_diff_colors_directed.json  triangle_all_edges_diff_colors_undirected.json  triangle_all_edges_same_color_directed.json  triangle_all_edges_same_color_undirected.json  triangle_diff_vertex_colors_undirected.json  triangle_same_vertex_color_undirected.json  triangle_two_edges_same_color_undirected.json  triangle_two_same_vertex_color_directed.json  two_nodes_bidirectional_diff_edge_colors_directed.json  two_nodes_bidirectional_same_edge_color_undirected.json  two_nodes_bidirectional_uncolored_directed.json  two_nodes_no_edges_directed.json  two_nodes_one_edge_undirected.json  two_nodes_parallel_diff_edge_colors_directed.json  two_nodes_parallel_same_edge_color_directed.json  two_nodes_parallel_uncolored_directed.json
tests/io/vertex_edge/: empty_lines_in_edge_file.edges  empty_lines_in_vertex_file.vertex_indices  malformed_edge_line_too_long.edges  malformed_vertex_line_too_long.vertex_indices  mixed_edge_colors.edges  non_consecutive_vertex_ids.vertex_indices  non_consecutive_with_colors.edges  non_consecutive_with_colors.vertex_indices  non_numeric_token_vertex_file.vertex_indices  triangle_all_edges_diff_colors.edges  triangle_all_edges_same_color.edges  triangle_same_vertex_color.vertex_indices  triangle_two_edges_same_color.edges  triangle_two_same_vertex_color.vertex_indices  two_nodes_bidirectional_diff_edge_colors.edges  two_nodes_bidirectional_same_edge_color.edges  two_nodes_parallel_diff_edge_colors.edges  two_nodes_parallel_same_edge_color.edges  whitespace_only_edge_line.edges  whitespace_only_vertex_line.vertex_indices
tests/utils/: GraphUtilsTest.cpp
